--- a/app/src/main/res/layout/gallery_item.xml
+++ b/app/src/main/res/layout/gallery_item.xml
@@ -14,7 +14,7 @@
     <RelativeLayout
         android:id="@+id/caption"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="@dimen/caption_height"
         android:layout_gravity="bottom"
         android:background="#50000000"
         android:padding="16dp">
